2009-08-11  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceDebugBehavior.cs, ServiceMetadataBehavior.cs :
	  add Binding properties. Properties are now auto.
	* ServiceMetadataExtension.cs : take Binding too to build dispatcher.

2009-08-10  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceContractGenerator.cs : removed ChannelBase proxy stuff,
	  which will be moved to svcutil source.
	  The targets for extension should be the interface, not the client
	  class.

2009-08-10  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceContractGenerator.cs,
	  OperationContractGenerationContext.cs : support extensions i.e.
	  IServiceContractGenerationExtension and IOperation...(ditto) .

2009-08-10  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceContractGenerator.cs : first step to add moonlight-based
	  client proxy generator (it is not supported in 3.5. needs to be
	  enabled by some hook, such as reflection-based hack).

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* ContractDescription.cs : wcf & 2.1 is specially annoying land :(

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* ContractDescriptionGenerator.cs : add new contract getter to
	  create callback contract type (which does not demand
	  ServiceContractAttribute).

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceEndpoint.cs, ContractDescription.cs : moved client runtime
	  creator from former to latter.

2009-08-06  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceEndpoint.cs : follow ClientRuntime change.

2009-07-31  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceEndpoint.cs : ListenUri defaults to Address.Uri.

2009-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* ContractDescriptionGenerator.cs : actually it had to fill all of
	  the interface methods (and implementation methods).

2009-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* ContractDescriptionGenerator.cs : do not reject derived service
	  contract from another service contract type.
